# mangoo

./: ChangeLog  LICENSES  Makefile  Makefile.in  chown.patch~  config.status  configure  configure.ac  stream.c  stream.c~
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: mangoodesign.odg
src/: Makefile  Makefile.am  Makefile.in
src/apps/: Makefile  Makefile.in
src/apps/fuse/: Makefile  Makefile.am  Makefile.in  cscope.out  mangoofuse  mangoofuse.c  mangoofuse.c.rej  mangoofuse.c~  mangoofuse.patch  newmangoofuse.c~  oldmangoofuse.c
src/apps/fuse/.deps/: mangoofuse.Po
src/lang/: Makefile  Makefile.in
src/lang/c/: Makefile  Makefile.in
src/lang/c/include/: cscope.out  mangoo.h  mangooapp.h  mangooapp.h~  mangooconf.h  mangooconf.h.in  mangoostore.h~  stamp-h1
src/lang/c/lib/: Makefile  Makefile.am  Makefile.in  cscope.out  mangoo (copy).c
src/lang/c/lib/.deps/: mangoo.Po
src/mypatch/: getmode.patch  transaction.patch
src/samp/: compile  concwrite  concwrite.c  concwrite.c~  makefile~  myapp  myapp.c  newcomp  newcomp~  oldmyapp.c  oldmyapp.c~  sampdir  sampdir.c  sampdir.c~  sampread  sampread.c~  sampwrite  sampwrite.c  sampwrite.c~  stream.c~  writenew  writenew.c~
src/stores/: Makefile  Makefile.am  Makefile.in
src/stores/dbfs/: Makefile  Makefile.am  Makefile.in  attr.c  cscope.out  dbfs.c  dbfs.h  dir.c  fsinfo.c  mkdbfs  mkdbfs.c  stream.c
src/stores/dbfs/.deps/: attr.Po  dbfs.Po  dir.Po  fsinfo.Po  mkdbfs.Po  stream.Po
